# NVDNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_test_voronoi_data.py  install.sh  install_python.sh
baselines/: README.md
docker/: Dockerfile  Dockerfile_with_proxy
include/: EigenDenseBaseAddons.h  cgal_tools.cpp  cgal_tools.h  cmake_definition.h.in  common_util.cpp  common_util.h  icp.h  inexact_kernel.cpp  inexact_kernel.h  intersection_tools.cpp  intersection_tools.h  kd_tree_helper.cpp  kd_tree_helper.h  map_util.cpp  map_util.h  model_tools.cpp  model_tools.h
python/: abc_hdf5_dataset.py  common_utils.py  extract_mesh_batched.py  model.py  test847.txt  test_model.py  test_model.yaml  train.py
scripts/: check_chamfer.py  check_extraction_failed.py  clean_mechnical_part.sh  extract_mesh_batched.py  main.py  real_scene.sh  setup.sh  setup_neural_recon.sh
scripts/BAK/: Dockerfile  Dockerfile_dense
src/: CMakeLists.txt  calculate_distance.h  calculate_indices.h  read_primitives_from_yml.h
src/calculate_similarity/: CMakeLists.txt  calculate_similarity.cpp
src/calculate_voronoi/: CMakeLists.txt  calculate_distance1.h  calculate_voronoi.cpp
src/evaluate/: 1.txt  CMakeLists.txt  evaluate.cpp
src/extract_mesh/: CMakeLists.txt  assemble.cpp  assemble.h  assemble_loops.cpp  boundary_growing.cpp  classify_points_region_growing.cpp  classify_points_region_growing.h  ellipse_fit.h  extract_mesh.cpp  filling_holes.h  merge_shape.h  shape2d.cpp  tools.cpp  tools.h
src/prepare_complexgen_trim_data/: CMakeLists.txt  prepare_complexgen_trim_data.cpp
src/prepare_data_3d/: CMakeLists.txt  prepare_data_3d.cpp  prepare_data_3d_parallel.h  tools.h  writer.cpp  writer.h
src/prepare_data_for_point2CAD_evaluate/: CMakeLists.txt  prepare_data_for_point2CAD_evaluate.cpp
src/prepare_data_for_sed_evaluate/: CMakeLists.txt  prepare_data_for_sed_evaluate.cpp
src/prepare_evaluate_gt/: CMakeLists.txt  prepare_evaluate_gt.cpp
src/prepare_evaluate_gt_feature/: CMakeLists.txt  prepare_evaluate_gt_feature.cpp
src/prepare_evaluate_gt_feature_scene/: CMakeLists.txt  prepare_evaluate_gt_feature_scene.cpp
src/prepare_patch_data/: CMakeLists.txt  prepare_patch_data.cpp  writer.h
src/prepare_udf/: CMakeLists.txt  calculate_distance1.h  prepare_udf.cpp  writer.h
src/sample_points_for_eval/: CMakeLists copy.txt  CMakeLists.txt  assemble.cpp  assemble_loops.h  boundary_growing.h  classify_points_lcc.h  ellipse_fit.cpp  filling_holes.cpp  fitting.cpp  fitting.h  merge_shape.cpp  npy.hpp  sample_points_for_eval.cpp  shape2d.h  shape3d.cpp  shape3d.h
src/split_model/: CMakeLists.txt  split_model.cpp
