add_subdirectory(extract_mesh)
add_subdirectory(split_model)
add_subdirectory(calculate_voronoi)
add_subdirectory(prepare_udf)
add_subdirectory(prepare_evaluate_gt)
# add_subdirectory(prepare_patch_data)
add_subdirectory(prepare_evaluate_gt_feature)
add_subdirectory(evaluate)
add_subdirectory(sample_points_for_eval)